--- a/style.css
+++ b/style.css
@@ -29,9 +29,10 @@ section{
 }
 ul{
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     padding:0;
+    background:red;
 }
 
 li{
@@ -40,7 +41,6 @@ li{
     color:black;
     list-style: none;
     border:solid black 1px;
-    width: 100%;
 }
 
 .box{
