--- a/style.css
+++ b/style.css
@@ -1,69 +1,127 @@
 *{
-    margin:0;
-    padding: 0;
     box-sizing: border-box;
-}
-body{
-    background:rgb(34, 33, 33);
+    margin: 0;
+    padding:0;
 }
 
 html{
-    color: white;
+    font-family: 'Poppins', sans-serif;
 }
 
 button{
-    color:black;
-    font-size: 1rem;
-    background:#ABABAB;
-    border:none;
     cursor: pointer;
-
 }
 
-section{
-    display: flex;
-    flex-direction: column;
+body{
+    background-image: linear-gradient(120deg,#EFE7E7, #fcb4a0 );
+    min-height: 100vh;
+}
+
+header{
+    font-size: 1.5rem;
+}
+
+header , form{
+    min-height:20vh;
+    display:flex;
     align-items: center;
     justify-content: center;
-    min-height:100vh;
 }
-ul{
+
+form input,form button{
+    padding: 0.5rem;
+    font-size:2rem;
+    border:none;
+    background: white;;
+}
+
+form button{
+    color: #fcb4a0;
+    background:white;
+    transition: all 0.5s ease;
+}
+
+form button:hover{
+    color:white;
+    background:#fcb4a0; 
+}
+
+.todo-container{
     display:flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    padding:0;
-    background:red;
+    
 }
 
-li{
-    text-align: center;
-    background: white;
-    color:black;
+.todo-list{
+    min-width:30%;
     list-style: none;
-    border:solid black 1px;
 }
 
-.box{
-    min-height: 50vh;
-    padding:2rem;
+
+.todo{
+    background:white;
+    margin:0.5rem;
+    font-size:1.5rem;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.5s ease;
 }
 
-.check{
-    background: #6DDE45;
-    background-image:url(./Icons/checkmark_83735.png);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width:20px;
-    height:19px;
+.todo li{
+    flex:1;
 }
 
-.trash{
-    background: red;
-    background-image:url(./Icons/seo-social-web-network-internet_262_icon-icons.com_61518.png) ;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 20px;
-    height: 19px;
+.check-button, .trash-button{
+    background: #f09d86;
+    color:white;
+    border:none;
+    padding:1rem;
+    font-size:1rem;
+}
+
+.check-button:hover{
+    background:green;
+    transition: ease-in 0.3s ;
+}
+
+.todo-item{
+    padding:0rem 0.5rem;
+}
+
+.fa-check, .fa-trash{
+    pointer-events: none;
+} /* Ignores clicking the icon  */
+
+.completed{
+    text-decoration: line-through;
+    opacity: 0.5;
+}
+
+.fall{
+    transform: translateY(8rem) rotateZ(20deg);
+    opacity: 0;
+}
+
+.clear{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.clear button{
+    padding:1rem 6rem;
+    border: none;
+    background:white;
+    color: #f09d86;
+    font-size: 2rem;
+    font-weight: bolder;
+    margin:1rem;
+}
+
+.clear button:hover{
+    background:#f09d86;
+    color:white;
+    transition: all 0.5s ease;
 }
